<resources>

    <string name="Base_Url">http://www.appstudeo.com</string>
    <string name="app_name">Bitmoon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_with">SIGN IN WITH</string>

    <string name="email_address">Email Address</string>
    <string name="cpassword">Confirm Password</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="rule_of_use">I Have Read the Rules of Use</string>

    <string name="regbutton">Register Device</string>
    <string name="msglbl">"Message : "</string>

    <string-array name="country_array">
        <item>Jordan</item>
        <item>Lebanon</item>
        <item>Egypt</item>
        <item>United Arab Emirates</item>
    </string-array>
    <string-array name="city_jordan">
        <item>Amman</item>
        <item>Jerash</item>
        <item>Irbid</item>
        <item>Madaba</item>
        <item>Aqaba</item>
    </string-array>
    <string-array name="city_lebnan">
        <item>Beirut</item>
        <item>Tripoli</item>
        <item>Jounieh</item>
    </string-array>
    <string-array name="city_egypt">
        <item>Cairo</item>
        <item>Alexandria</item>
        <item>Ghardaqa</item>
        <item>Giza</item>
        <item>Subra El Kheima</item>
    </string-array>
    <string-array name="city_uae">
        <item>Dubai</item>
        <item>Abu Dhabi</item>
        <item>Ajman</item>
        <item>Sharjah</item>
        <item>AL Ain</item>
    </string-array>

    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_field_required">Field Required</string>
    <string name="error_invalid_email">Invalid Email</string>


    <string name="Cuisine"><font size="11">SELECT CUISINE....</font></string>
    <string name="Type"><font size="11">SELECT TYPE....</font></string>

    <string name="review"><u>Review Rules of Use</u>.</string>

    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>


    <string name="offers_ar">عروض</string>
    <string name="details_ar">تفاصيل</string>
</resources>
