<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/rec1"
        android:gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo" />

    </RelativeLayout>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp">

            <EditText
                android:id="@+id/Email"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColorHint="#C0C0C0"
                android:theme="@style/EditRegisterTheme" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="70dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#C0C0C0"
                android:theme="@style/EditRegisterTheme" />

            <EditText
                android:id="@+id/CPassword"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="120dp"
                android:ems="10"
                android:hint="@string/cpassword"
                android:inputType="textPassword"
                android:textColorHint="#C0C0C0"
                android:theme="@style/EditRegisterTheme" />

            <EditText
                android:id="@+id/FName"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="170dp"
                android:ems="10"
                android:hint="@string/fname"
                android:inputType="textPersonName"
                android:textColorHint="#C0C0C0"
                android:theme="@style/EditRegisterTheme" />

            <EditText
                android:id="@+id/LName"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="220dp"
                android:ems="10"
                android:hint="@string/lname"
                android:inputType="textPersonName"
                android:textColorHint="#C0C0C0"
                android:theme="@style/EditRegisterTheme" />

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:text="@string/country"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginStart="14dp"
                android:layout_alignBaseline="@+id/jordan"
                android:layout_alignBottom="@+id/jordan"
                android:layout_alignLeft="@+id/checkBox"
                android:layout_alignStart="@+id/checkBox" />

            <Spinner
                android:id="@+id/jordan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:text="Jordan"
                android:textColor="#29ABE2"
                android:textSize="16sp"
                android:layout_below="@+id/LName"
                android:layout_toRightOf="@+id/country"
                android:layout_toEndOf="@+id/country"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_below="@+id/jordan"
                android:layout_alignLeft="@+id/country"
                android:layout_alignStart="@+id/country"
                android:layout_marginTop="9dp" />

            <Spinner
                android:id="@+id/CitySpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#29ABE2"
                android:textSize="16sp"
                android:layout_below="@+id/LName"
                android:layout_alignTop="@+id/city"
                android:layout_alignLeft="@+id/jordan"
                android:layout_alignStart="@+id/jordan" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rule_of_use"
                android:layout_marginTop="22dp"
                android:layout_below="@+id/CitySpinner"
                android:layout_alignLeft="@+id/LName"
                android:layout_alignStart="@+id/LName"
                android:onClick="itemClicked"/>

            <ImageView
                android:layout_width="245dp"
                android:layout_height="130dp"
                android:layout_marginLeft="17dp"
                android:src="@drawable/register"
                android:id="@+id/register"
                android:layout_marginStart="17dp"
                android:layout_alignTop="@+id/checkBox"
                android:layout_alignLeft="@+id/city"
                android:layout_alignStart="@+id/city"
                android:layout_marginTop="20dp"
                android:onClick="RegisterFunc"/>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>